--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@
                     currentStep: 0,
                     totalSteps: 3,
                     errors: [
-                        { num: 1, desc: "Too many colors (10 distinct hues)" },
+                        { num: 1, title: "Color Overload",
+                        desc: "10 distinct hues creating cognitive load" },
                         { num: 2, desc: "Too dense bars affect readability" },
                         { num: 3, desc: "Too difficult to observe long-term trends" }
                     ]
