--- a/index.html
+++ b/index.html
@@ -395,8 +395,10 @@
                     currentStep: 0,
                     totalSteps: 3,
                     errors: [
-                        { num: 1, title: "Color Overload",
-                        desc: "10 distinct hues creating cognitive load" },
+                        { num: 1, 
+                         title: "Color Overload",
+                         desc: "10 distinct hues creating cognitive load" 
+                        },
                         { num: 2, desc: "Too dense bars affect readability" },
                         { num: 3, desc: "Too difficult to observe long-term trends" }
                     ]
