--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
                     <div class="error-steps" id="example1-steps"></div>
                 </div>
             </div>
-           
+        </div>
+        
             <div class="analysis-section" id="analysis1">
                 <div class="analysis-header">
                     <h3>What - Why - How Analysis</h3>
